Update application.properties: Adjust application configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,5 +17,9 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.security.user.name=admin
 spring.security.user.password=admin123
 
+# JWT Configuration
+jwt.secret=mySecretKeyForJWTTokenGenerationAndValidation
+jwt.expiration=86400000
+
 # Disable default security
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
