Update pom.xml: Adjust dependencies and plugins for authentication service

--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,8 @@
             <scope>runtime</scope>
         </dependency>
 
+		<!-- For JWT token generation and validation -->
+
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId> jjwt </artifactId>
